# Eventra

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.deploy.yml  docker-compose.override.yml  docker-compose.sonar.yml  docker-compose.yml  sonar-project.properties  vercel.json
services/auth-service/: .flake8  Dockerfile  README.md  alembic.ini  config.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  run.py
services/auth-service/app/: __init__.py
services/auth-service/app/models/: __init__.py  password_reset.py  user.py
services/auth-service/app/routes/: auth.py  oauth.py
services/auth-service/app/utils/: helpers.py
services/auth-service/docs/: API.md  QA.md  conf.py  index.rst
services/auth-service/docs/source/: admin_service.rst  app.models.rst  app.routes.rst  app.utils.rst  auth_service.rst  changelog.rst  conf.py  event_service.rst  gateway.rst  index.rst  registration_service.rst
services/auth-service/migrations/: env.py
services/auth-service/migrations/versions/: 12499cf38bbf_initial_schema_users_and_password_reset_.py
services/auth-service/tests/: conftest.py  test_helpers.py  test_login.py  test_logout.py  test_me.py  test_oauth.py  test_register.py
services/event-service/: Dockerfile  README.md  config.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  run.py
services/event-service/app/: __init__.py
services/event-service/app/models/: event.py  event_review.py  material.py  notification.py  sponsor.py
services/event-service/app/routes/: events.py  materials.py  notifications.py
services/event-service/docs/: conf.py
services/event-service/docs/source/: app.models.rst  app.routes.rst  app.utils.rst
services/event-service/migrations/: env.py
services/event-service/tests/: conftest.py  test_events_crud.py  test_events_search.py  test_materials.py  test_qr_ics.py
services/gateway/: .dockerignore  Dockerfile  README.md  config.py  entrypoint.sh  pyproject.toml  requirements.txt
services/gateway/app/: __init__.py
services/gateway/docs/: conf.py  index.rst
services/gateway/docs/source/: modules.rst
services/gateway/tests/: conftest.py  test_gateway.py
services/registration-service/: Dockerfile  README.md  config.py  entrypoint.sh  pyproject.toml  requirements.txt  run.py
services/registration-service/app/: __init__.py  scheduler.py
services/registration-service/docs/: conf.py
services/registration-service/migrations/: env.py
services/registration-service/tests/: conftest.py  test_feedback.py  test_registrations.py
(+214 files in other folders)
