[project]
name = "eventra-auth-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cachetools==5.5.2",
    "Flask==3.1.3",
    "Flask-Cors==5.0.1",
    "Flask-JWT-Extended==4.7.1",
    "Flask-Limiter==2.7.0",
    "Flask-SQLAlchemy==3.1.1",
    "google-auth==2.38.0",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
    "PyJWT==2.12.1",
    "python-dotenv==1.2.2",
    "requests==2.32.3",
    "SQLAlchemy==2.0.48",
    "Werkzeug==3.1.6",
    "alembic==1.18.4",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
