[project]
name = "eventra-event-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.1.3",
    "Flask-JWT-Extended==4.7.1",
    "Flask-SQLAlchemy==3.1.1",
    "PyJWT==2.12.1",
    "Werkzeug==3.1.6",
    "alembic==1.18.4",
    "gunicorn==23.0.0",
    "icalendar==6.1.3",
    "psycopg2-binary==2.9.10",
    "qrcode[pil]==8.0",
    "SQLAlchemy==2.0.48",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
