[project]
name = "eventra-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.1.3",
    "Flask-Cors==5.0.1",
    "Flask-Limiter==3.9.0",
    "gunicorn==23.0.0",
    "redis==5.2.1",
    "requests==2.32.3",
    "Werkzeug==3.1.6",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
