[project]
name = "eventra-registration-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "APScheduler==3.10.4",
    "Flask==3.1.3",
    "Flask-JWT-Extended==4.7.1",
    "Flask-SQLAlchemy==3.1.1",
    "Pillow==11.2.1",
    "PyJWT==2.12.1",
    "Werkzeug==3.1.6",
    "alembic==1.18.4",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
    "qrcode==7.4.2",
    "requests==2.33.1",
    "resend==2.28.0",
    "SQLAlchemy==2.0.48",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
